k8s-manifests/make-jmeter-scenario/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.org/server-snippets: |
    #  listen 443;
    #  location / {
    #      return 200 $host;
    #  }
spec:
  tls:
  - hosts:
    - "mynginx1.com"
    - "mynginx2.com"
    - "mynginx3.com"
    secretName: nginx
  ingressClassName: nginx
  rules:
  - host: "mynginx1.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 443
  - host: "mynginx2.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 443
  - host: "mynginx3.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 443
