k8s-manifests/make-jmeter-scenario/kustomize/nginx-digest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-digest
spec:
  selector:
    matchLabels:
      app: nginx-digest
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-digest
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: "/etc/nginx/conf.d/"
        - name: tls
          mountPath: "/etc/nginx/ssl/"
        - name: digest
          mountPath: "/etc/nginx/digest"
      volumes:
      - name: tls
        secret:
          secretName: nginx-tls
      - name: config
        configMap:
          name: nginx-digest
      - name: digest
        secret:
          secretName: nginx-digest
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-digest
spec:
  selector:
    app: nginx-digest
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-digest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - "nginx-digest"
    secretName: nginx-digest
  ingressClassName: nginx
  rules:
  - host: "nginx-digest"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-digest
            port:
              number: 80
